--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,24 @@ spring.aop.auto=true
 #spring.aop.proxy-target-class=false
 
 logging.level.com.zsf.core.mapper=debug
+
+#redis配置
+# Redis服务器地址
+spring.redis.host = 8.129.229.170
+# Redis服务器连接端口
+spring.redis.port = 6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password = redis123456
+#最大连接数
+#spring.redis.maxTotal=600
+spring.redis.pool.max-active=600
+#最大空闲连接
+spring.redis.pool.max-idle=300
+#最小空闲连接
+spring.redis.pool.min-idle=1
+#等待可用连接的最大时间
+spring.redis.pool.max-wait=100000
+#当调用borrow Object方法时，是否进行有效性检查
+spring.redis.testOnBorrow=true
+#缓存有效时长
+redis.defaultExpiration=0
